[package]
name = "stegs"
version = "0.1.0"
authors = ["robin <yxdunc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
thiserror = "1.0"

# compose svg
svg_composer = { path = "../svg_composer", version = "0.1.0" }

# render svg
resvg = "0.13.1"
usvg = "0.13.1"
fontdb = "0.5.1"
tiny-skia = "0.4.1"