[package]
name = "stegs"
version = "0.1.0"
authors = ["robin <yxdunc@users.noreply.github.com>"]
edition = "2018"
description = "Generative SVG stegs for stegano.graphics"
license = "MIT"
repository = "https://github.com/yxdunc/stegano-graphics"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
